ucs-school-import (16.0.3-8) unstable; urgency=low

  * Bug #49268: add convenience wrapper for easy usage of PyHooksLoader

 -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 16:34:44 +0100

ucs-school-import (16.0.3-7) unstable; urgency=low

  * Bug #49259: allow configuration of allowed special characters in username

 -- Daniel Troeder <troeder@univention.de>  Mon, 08 Apr 2019 23:00:13 +0200

ucs-school-import (16.0.3-6) unstable; urgency=low

  * Bug #48188: add hook that runs before reading the input data
  * Bug #48189: add pre-read hook, that can change the column names in a CSV file

 -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 17:09:24 +0100

ucs-school-import (16.0.3-5) unstable; urgency=low

  * Bug #48655: allow the configuration of columns missing in the input file

 -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 16:04:33 +0100

ucs-school-import (16.0.3-4) unstable; urgency=low

  * Bug #48792: fix ucsschoolRole migration script regarding case of OUs

 -- Daniel Troeder <troeder@univention.de>  Tue, 26 Feb 2019 17:44:29 +0100

ucs-school-import (16.0.3-3) unstable; urgency=low

  * Bug #48722: Specify description of ucsschool/import/attach/policy/default-umc-users

 -- Ole Schwiegert <schwiegert@univention.de>  Mon, 25 Feb 2019 12:43:02 +0100

ucs-school-import (16.0.3-2) unstable; urgency=low

  * Bug #45538: revert changes of last changelog entry

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Jan 2019 11:44:18 +0100

ucs-school-import (16.0.3-1) unstable; urgency=low

  * Bug #45538: fix OID clash in LDAP schema

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Jan 2019 15:40:09 +0100

ucs-school-import (16.0.2-67) unstable; urgency=low

  * Bug #48478: allow forward compatible use of record_uid and source_uid

 -- Daniel Troeder <troeder@univention.de>  Thu, 17 Jan 2019 17:38:43 +0100

ucs-school-import (16.0.2-66) unstable; urgency=low
