@@ -319,6 +319,13 @@ class ImportUser(User):
 			self._all_usernames[self.name] = UsernameUniquenessTuple(self.record_uid, self.source_uid, self.dn)
 		return res
 
+	def create_without_hooks_roles(self, lo):
+		if self.config['dry_run']:
+			self.logger.info("Dry-run: skipping user.create() for %s.", self)
+			return True
+		else:
+			return super(ImportUser, self).create_without_hooks_roles(lo)
+
 	@classmethod
 	def get_ldap_filter_for_user_role(cls):  # type: () -> str
 		if not cls.factory:
@@ -868,13 +875,24 @@ class ImportUser(User):
 			self.logger.debug("No school_classes are set, not modifying existing ones.")
 			udm_obj = self.get_udm_object(lo)
 			self.school_classes = self.get_school_classes(udm_obj, self)
-		return super(ImportUser, self).modify_without_hooks(lo, validate, move_if_necessary)
+		if self.config['dry_run']:
+			self.logger.info("Dry-run: skipping user.modify() for %s.", self)
+			return True
+		else:
+			return super(ImportUser, self).modify_without_hooks(lo, validate, move_if_necessary)
 
 	def move(self, lo, udm_obj=None, force=False):
 		# type: (LoType, Optional[UdmObjectType], Optional[bool]) -> bool
 		self.lo = lo
 		self.check_schools(lo)
 		return super(ImportUser, self).move(lo, udm_obj, force)
+
+	def move_without_hooks(self, lo, udm_obj, force=False):
+		if self.config['dry_run']:
+			self.logger.info("Dry-run: skipping user.move() for %s.", self)
+			return True
+		else:
+			return super(ImportUser, self).move_without_hooks(lo, udm_obj, force)
 
 	@classmethod
 	def normalize(cls, s):  # type: (str) -> str
@@ -922,6 +940,13 @@ class ImportUser(User):
 	def remove(self, lo):  # type: (LoType) -> bool
 		self.lo = lo
 		return super(ImportUser, self).remove(lo)
+
+	def remove_without_hooks(self, lo):
+		if self.config['dry_run']:
+			self.logger.info("Dry-run: skipping user.remove() for %s.", self)
+			return True
+		else:
+			return super(ImportUser, self).remove_without_hooks(lo)
 
 	def validate(self, lo, validate_unlikely_changes=False, check_username=False):
 		# type: (LoType, Optional[bool], Optional[bool]) -> None
